tests/snapshot/error/stack_trace/dynamic_import_async_module.js
async function foo() {
  await import('./top_level_await_module.js');
}

await foo();